p2/provisions/manifests/app3/app3.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-three-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: app-three-ingress
  rules:
  - host: app3.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three-service
            port:
              number: 80
